Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6785

Interop 2.7.0<->master sanity test_56w: cannot swap layouts: Device or resource busy

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • Lustre 2.8.0
    • None
    • server: 2.7.0
      client: lustre-master build # 3071 EL7
    • 3
    • 9223372036854775807

      This issue was created by maloo for sarah_lw <wei3.liu@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/a260a392-1237-11e5-bd2d-5254006e85c2.

      The sub-test test_56w failed with the following error:

      /usr/bin/lfs migrate -i 0 /mnt/lustre/d56w.sanityw/migr_1_ost failed
      
      yes: standard output: Broken pipe
      yes: write error
      /usr/bin/lfs_migrate -y -c 6 /mnt/lustre/d56w.sanityw/file1
      /mnt/lustre/d56w.sanityw/file1: /usr/bin/lfs: /mnt/lustre/d56w.sanityw/file1: cannot swap layouts: Device or resource busy
      cannot put lease: No locks available (37)
      error: migrate: migrate stripe file '/mnt/lustre/d56w.sanityw/file1' failed
      falling back to rsync-based migration
      done
      

            hdoreau Henri Doreau (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: