LU-6785 utils: compatibility fix for lfs migrate

Make lfs migrate able to operate against servers that support
file lease but not atomic swap/close (as added in LU-4840).

Migrations that fail in non-blocking mode with EBUSY will be
automatically retried with group lock.

Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Change-Id: I7d3cdccfcc5bec78e69c69615ee29cac11f6f31f